add missing button for filter

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     
         <div class="col-md-3">
             placeholder 3 table
+            <input type="date" id="datetime"><button id="submit-form">clickme</button>
+
         </div>
     
         <div class="col-md-9">
